[package]
name = "tftprust"
version = "0.1.0"
authors = ["raptorswing"]
edition = "2018"

[dependencies]
anyhow = "1.0.57"
thiserror = "1.0.31"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "net", "time", "fs"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "net", "time", "fs", "macros"] }