[package]
name = "tftprust"
version = "0.1.0"
authors = ["raptorswing"]
edition = "2018"

[dependencies]
anyhow = "1.0.57"
async-stream = "0.3.3"
bytes = "1"
futures-core = "0.3"
futures-util = "0.3"
thiserror = "1.0.31"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "net", "time", "fs"] }
tokio-stream = "0.1.9"
tokio-util = { version = "0.7.3", features = ["io"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "net", "time", "fs", "macros"] }